<resources>
    <string name="app_name">InventoryApp</string>
    <string name="action_insert_dummy_data">Insert dummy data.</string>
    <string name="action_delete_all_entries">Delete all entries.</string>
    <string name="hint_title">Title</string>
    <string name="hint_author">Author</string>
    <string name="hint_price">price</string>
    <string name="hint_555555555">555555555</string>
    <string name="hint_supplier">Supplier</string>
    <string name="category_supplier">Supplier</string>
    <string name="hint_quantity">quantity</string>
    <string name="category_quantity">Quantity</string>
    <string name="euro_sign">€</string>
    <string name="category_price">Price</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_activity_title_new_book">Add a book</string>
    <string name="editor_activity_title_edit_book">Edit book.</string>
    <string name="editor_insert_book_failed">Error with saving book.</string>
    <string name="editor_insert_book_successful">Book saved.</string>
    <string name="editor_update_book_failed">Error with updating book.</string>
    <string name="editor_update_book_successful">Book updated.</string>
    <string name="editor_delete_all_books_failed">Error with deleting books</string>
    <string name="editor_delete_all_books_successful">All books deleted successfully</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="warning_enter_valid_phone">Phone number is invalid.</string>
    <string name="empty_view_title_text">There are no books now.</string>
    <string name="empty_view_subtitle_text">Just add a book by clicking a button bellow.</string>
    <string name="test_book_title">Iliad</string>
    <string name="test_book_author">Homer</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="check_inserting_value_title">Insert title. Please</string>
    <string name="check_inserting_value_author">Insert author. Please</string>
    <string name="check_inserting_value_supplier">Insert supplier. Please</string>
    <string name="check_inserting_value_supplier_phone">Insert supplier phone number, too. Please</string>
    <string name="error_message_validation_supplier_phone_number">Phone number is not valid. Min 6 - max 12 signs. Check it pleas.</string>
    <string name="message_book_sold">Sorry. The book is sold out.</string>
    <string name="show_quantity_prefix">In stock:</string>
    <string name="hint_price_value">2€</string>
    <string name="hint_quantity_value">8 copies</string>
    <string name="category_book">Book</string>
    <string name="check_inserting_value_price">Insert price.Pleas.</string>
    <string name="check_inserting_value_quantity">Insert quantity.Pleas.</string>
</resources>
