<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the editor -->
<ScrollView    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Book category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_book" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/small_padding_right_left">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_book_title"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_title"
                android:inputType="textCapWords" />

            <!-- Breed field -->
            <EditText
                android:id="@+id/edit_book_author"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_author"
                android:inputType="textCapWords" />
        </LinearLayout>
    </LinearLayout>

    <!-- Price category -->
    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_price" />

        <!-- Input field -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="@dimen/small_padding_right_left">

            <!-- Weight field -->
            <EditText
                android:id="@+id/edit_book_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_price"
                android:inputType="number" />

            <!-- Units for weight (kg) -->
            <TextView
                android:id="@+id/label_currency"
                style="@style/EditorUnitsStyle"
                android:text="@string/euro_sign" />
        </RelativeLayout>
    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_quantity" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/small_padding_right_left"
            android:paddingRight="@dimen/small_padding_right_left">

            <!-- Weight field -->
            <Button
                android:id="@+id/quantity_decrease_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/minus" />

            <EditText
                android:id="@+id/edit_book_quantity"
                style="@style/EditorFieldStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/hint_quantity"
                android:inputType="number" />

            <Button
                android:id="@+id/quantity_increase_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plus" />
        </LinearLayout>

    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/small_padding_right_left">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier"
                android:inputType="textCapWords" />

            <!-- Breed field -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_supplier_phone"
                    style="@style/EditorFieldStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/hint_555555555"
                    android:inputType="phone" />

                <ImageButton
                    android:id="@+id/call_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_call" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>