<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for a single list item in the list of books -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:descendantFocusability="blocksDescendants"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="3"
        android:paddingRight="@dimen/small_padding_right_left"
        android:paddingLeft="@dimen/small_padding_right_left">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textStyle="italic"
                android:hint="@string/test_book_title"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#2B3D4D" />

            <TextView
                android:id="@+id/author_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/test_book_author"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#AEB6BD" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_padding_right_left"
                android:hint="@string/hint_price_value" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_padding_right_left"
                android:layout_alignParentRight="true"
                android:hint="@string/hint_quantity_value" />
        </RelativeLayout>
    </LinearLayout>
    <ImageButton
        android:id="@+id/sold_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_kasa"
        android:layout_weight="1"
        />
</LinearLayout>